--- a/app/components/layouts/FooterLoggedIn/FooterLoggedIn.module.css
+++ b/app/components/layouts/FooterLoggedIn/FooterLoggedIn.module.css
@@ -4,8 +4,11 @@
   padding: 20px 0;
   width: 100%;
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.05);
-  z-index: 10;
-  position: relative;
+  z-index: 999;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
   font-family: var(--font-montserrat);
   height: 4rem;
 }
