--- a/app/components/layouts/NavbarLoggedIn/NavbarLoggedIn.module.css
+++ b/app/components/layouts/NavbarLoggedIn/NavbarLoggedIn.module.css
@@ -4,8 +4,11 @@
   width: 100%;
   padding: 0 0;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-  position: relative;
-  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
   height: 4rem;
 }
 
