--- a/app/components/layouts/NavbarLoggedOut/NavbarLoggedOut.module.css
+++ b/app/components/layouts/NavbarLoggedOut/NavbarLoggedOut.module.css
@@ -11,6 +11,7 @@
   z-index: 999;
   display: flex;
   justify-content: center;
+  height: 4rem;
 }
 
 .navbar-container {
